4-th version of activity.ipynb

--- a/activity.ipynb
+++ b/activity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "# read data\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "outputs": [],
    "source": [
     "# splitting data into two dataframes by column AB_Cohort\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "outputs": [
     {
      "name": "stdout",
@@ -136,16 +136,16 @@
     "    return retention_churn_df\n",
     "\n",
     "# Вычисляем Retention и Churn Rate для когорты A и B с учетом покупок и без учета\n",
-    "result_cohort_A_all_df = calculate_retention_churn(data_cohort_A)\n",
-    "result_cohort_B_all_df = calculate_retention_churn(data_cohort_B)\n",
-    "result_cohort_A_purchase_df = calculate_retention_churn(data_cohort_A, filter_by_purchase=True)\n",
-    "result_cohort_B_purchase_df = calculate_retention_churn(data_cohort_B, filter_by_purchase=True)\n",
+    "retention_cohort_A_all_df = calculate_retention_churn(data_cohort_A)\n",
+    "retention_cohort_B_all_df = calculate_retention_churn(data_cohort_B)\n",
+    "retention_cohort_A_purchase_df = calculate_retention_churn(data_cohort_A, filter_by_purchase=True)\n",
+    "retention_cohort_B_purchase_df = calculate_retention_churn(data_cohort_B, filter_by_purchase=True)\n",
     "\n",
     "# Вывести результаты\n",
-    "print(\"result_cohort_A (All Users):\", result_cohort_A_all_df)\n",
-    "print(\"result_cohort_B (All Users):\", result_cohort_B_all_df)\n",
-    "print(\"result_cohort_A (Purchase Users):\", result_cohort_A_purchase_df)\n",
-    "print(\"result_cohort_B (Purchase Users):\", result_cohort_B_purchase_df)\n",
+    "print(\"result_cohort_A (All Users):\", retention_cohort_A_all_df)\n",
+    "print(\"result_cohort_B (All Users):\", retention_cohort_B_all_df)\n",
+    "print(\"result_cohort_A (Purchase Users):\", retention_cohort_A_purchase_df)\n",
+    "print(\"result_cohort_B (Purchase Users):\", retention_cohort_B_purchase_df)\n",
     "\n"
    ],
    "metadata": {
@@ -157,7 +157,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'retention_cohort_A_all_df' (DataFrame)\n",
+      "Stored 'retention_cohort_B_all_df' (DataFrame)\n",
+      "Stored 'retention_cohort_A_purchase_df' (DataFrame)\n",
+      "Stored 'retention_cohort_B_purchase_df' (DataFrame)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%store retention_cohort_A_all_df\n",
+    "%store retention_cohort_B_all_df\n",
+    "%store retention_cohort_A_purchase_df\n",
+    "%store retention_cohort_B_purchase_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "outputs": [
     {
      "data": {
@@ -174,12 +202,12 @@
     "plt.figure(figsize=(12, 8))\n",
     "\n",
     "# График Retention Rate для всех пользователей\n",
-    "plt.plot(result_cohort_A_all_df['Day'], result_cohort_A_all_df['Retention Rate (%)'], label='Cohort A (All)',linestyle='--', marker='o')\n",
-    "plt.plot(result_cohort_B_all_df['Day'], result_cohort_B_all_df['Retention Rate (%)'], label='Cohort B (All)', marker='o')\n",
+    "plt.plot(retention_cohort_A_all_df['Day'], retention_cohort_A_all_df['Retention Rate (%)'], label='Cohort A (All)',linestyle='--', marker='o')\n",
+    "plt.plot(retention_cohort_B_all_df['Day'], retention_cohort_B_all_df['Retention Rate (%)'], label='Cohort B (All)', marker='o')\n",
     "\n",
     "# График Retention Rate только для пользователей с покупками\n",
-    "plt.plot(result_cohort_A_purchase_df['Day'], result_cohort_A_purchase_df['Retention Rate (%)'], label='Cohort A (Purchase)', linestyle='--', marker='x')\n",
-    "plt.plot(result_cohort_B_purchase_df['Day'], result_cohort_B_purchase_df['Retention Rate (%)'], label='Cohort B (Purchase)', marker='x')\n",
+    "plt.plot(retention_cohort_A_purchase_df['Day'], retention_cohort_A_purchase_df['Retention Rate (%)'], label='Cohort A (Purchase)', linestyle='--', marker='x')\n",
+    "plt.plot(retention_cohort_B_purchase_df['Day'], retention_cohort_B_purchase_df['Retention Rate (%)'], label='Cohort B (Purchase)', marker='x')\n",
     "\n",
     "# Настройки графика\n",
     "plt.title('Retention Rate Comparison (All Users vs. Purchase Users)')\n",
@@ -201,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "outputs": [
     {
      "data": {
@@ -218,12 +246,12 @@
     "plt.figure(figsize=(12, 8))\n",
     "\n",
     "# График Churn Rate для всех пользователей\n",
-    "plt.plot(result_cohort_A_all_df['Day'], result_cohort_A_all_df['Churn Rate (%)'], label='Churn A (All)',linestyle='--', marker='o')\n",
-    "plt.plot(result_cohort_B_all_df['Day'], result_cohort_B_all_df['Churn Rate (%)'], label='Churn B (All)', marker='o')\n",
+    "plt.plot(retention_cohort_A_all_df['Day'], retention_cohort_A_all_df['Churn Rate (%)'], label='Churn A (All)',linestyle='--', marker='o')\n",
+    "plt.plot(retention_cohort_B_all_df['Day'], retention_cohort_B_all_df['Churn Rate (%)'], label='Churn B (All)', marker='o')\n",
     "\n",
     "# График Churn Rate только для пользователей с покупками\n",
-    "plt.plot(result_cohort_A_purchase_df['Day'], result_cohort_A_purchase_df['Churn Rate (%)'], label='Churn A (Purchase)', linestyle='--', marker='x')\n",
-    "plt.plot(result_cohort_B_purchase_df['Day'], result_cohort_B_purchase_df['Churn Rate (%)'], label='Churn B (Purchase)', marker='x')\n",
+    "plt.plot(retention_cohort_A_purchase_df['Day'], retention_cohort_A_purchase_df['Churn Rate (%)'], label='Churn A (Purchase)', linestyle='--', marker='x')\n",
+    "plt.plot(retention_cohort_B_purchase_df['Day'], retention_cohort_B_purchase_df['Churn Rate (%)'], label='Churn B (Purchase)', marker='x')\n",
     "\n",
     "# Настройки графика\n",
     "plt.title('Churn Rate Comparison (All Users vs. Purchase Users)')\n",
@@ -244,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "outputs": [
     {
      "name": "stdout",
@@ -345,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "outputs": [
     {
      "data": {
@@ -384,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "outputs": [
     {
      "data": {
@@ -424,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "outputs": [
     {
      "name": "stdout",
@@ -495,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "outputs": [
     {
      "data": {
@@ -549,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "outputs": [
     {
      "data": {
@@ -599,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "outputs": [
     {
      "name": "stdout",
@@ -724,15 +752,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_23452\\2754128933.py:13: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_23452\\3058145775.py:8: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  plt.plot(cohort_data['Retention'], cohort_data.mean(axis=1), label=cohort_label)\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_23452\\2754128933.py:13: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_23452\\3058145775.py:8: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  plt.plot(cohort_data['Retention'], cohort_data.mean(axis=1), label=cohort_label)\n"
      ]
     },
@@ -780,6 +808,18 @@
     "# Постройте графики для пользователей с покупками на одном графике\n",
     "plot_avg_gold(combined_avg_gold_purchase_users, 'Average Gold for All Cohorts (Purchase Users)')\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
