5-th version of involvement.ipynb

--- a/involvement.ipynb
+++ b/involvement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "# read data\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "# splitting data into two dataframes by column AB_Cohort\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "#1.1 Conversion rate\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "outputs": [
     {
      "data": {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "# 2.1 Average level and average day of life at which purchases are made\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "outputs": [
     {
      "data": {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -375,7 +375,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "outputs": [],
    "source": [],
    "metadata": {
