6-th version of revenue.ipynb

--- a/revenue.ipynb
+++ b/revenue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "# read data\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "# splitting data into two dataframes by column AB_Cohort\n",
@@ -104,12 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Stored 'avg_revenue_cohort_A_all_users_by_day' (DataFrame)\n",
+      "Stored 'avg_revenue_cohort_B_all_users_by_day' (DataFrame)\n",
       "Средний доход для кагорты A для всех пользователей по дням:    Retention  SumRevenue\n",
       "0          0    0.775075\n",
       "1          1    0.601936\n",
@@ -174,7 +176,12 @@
     "\n",
     "# Вычисляем средний доход для всех пользователей\n",
     "avg_revenue_cohort_A_all_users_by_day,avg_revenue_cohort_A_all_users = calculate_avg_revenue(data_cohort_A)\n",
+    "\n",
+    "%store avg_revenue_cohort_A_all_users_by_day\n",
+    "\n",
     "avg_revenue_cohort_B_all_users_by_day,avg_revenue_cohort_B_all_users =calculate_avg_revenue(data_cohort_B)\n",
+    "\n",
+    "%store avg_revenue_cohort_B_all_users_by_day\n",
     "\n",
     "# Вычисляем средний доход для пользователей с покупками\n",
     "avg_revenue_cohort_A_purchase_users_by_day,avg_revenue_cohort_A_purchase_users = calculate_avg_revenue(data_cohort_A, filter_by_purchase=True)\n",
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [
     {
      "data": {
@@ -304,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "#2.1 LTV\n",
@@ -331,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "outputs": [
     {
      "data": {
@@ -362,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -374,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -386,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -398,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -410,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -422,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -434,7 +441,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
