7-th version of involvement.ipynb. Refactor comments

--- a/involvement.ipynb
+++ b/involvement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -17,12 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "# read data\n",
-    "data = pd.read_csv(\"./data/data.csv\",delimiter=\";\")\n",
-    "#print(data)"
+    "data = pd.read_csv(\"./data/data.csv\",delimiter=\";\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -33,11 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "# splitting data into two dataframes by column AB_Cohort\n",
-    "# Разделение данных на два DataFrame по значению столбца \"AB_Cohort\"\n",
     "data_cohort_A = data[data['AB_Cohort'] == 'A']\n",
     "data_cohort_B = data[data['AB_Cohort'] == 'B']\n",
     "\n",
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -98,7 +96,7 @@
    "source": [
     "#1.1 Conversion rate\n",
     "\n",
-    "# Функция для расчета Conversion Rate\n",
+    "# Function for calculating Conversion Rate\n",
     "def calculate_conversion_rate(data):\n",
     "    conversion_rates = []\n",
     "\n",
@@ -115,11 +113,11 @@
     "\n",
     "    return conversion_rates\n",
     "\n",
-    "# Вычисляем Conversion Rate для когорты A и B\n",
+    "# Calculating the Conversion Rate for cohorts A and B\n",
     "conversion_rate_cohort_A = calculate_conversion_rate(data_cohort_A)\n",
     "conversion_rate_cohort_B = calculate_conversion_rate(data_cohort_B)\n",
     "\n",
-    "# Дни (1-7)\n",
+    "# Days (1-7)\n",
     "days = range(0, 8)\n",
     "\n"
    ],
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
@@ -145,7 +143,7 @@
    ],
    "source": [
     "#1.2 Conversion rate graph\n",
-    "# Строим график Conversion Rate для когорт A и B\n",
+    "# Building a Conversion Rate graph for cohorts A and B\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(days, conversion_rate_cohort_A, label='Cohort A', marker='o')\n",
     "plt.plot(days, conversion_rate_cohort_B, label='Cohort B', marker='o')\n",
@@ -156,7 +154,7 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "\n",
-    "# Отображение графика\n",
+    "# Graph display\n",
     "plt.show()\n"
    ],
    "metadata": {
@@ -168,54 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "\"\\ndef calculate_avg_level_and_day(data):\\n    cohort_data_with_purchase = data[data['CountBuy'] > 0]\\n\\n    avg_level = cohort_data_with_purchase['MaxLevelPassed'].mean()\\n    avg_day = cohort_data_with_purchase['Retention'].mean()\\n\\n    return avg_level, avg_day\\n\\n# Вычисляем средний уровень и средний день жизни для когорты A и B с покупками\\navg_level_cohort_A, avg_day_cohort_A = calculate_avg_level_and_day(data_cohort_A)\\navg_level_cohort_B, avg_day_cohort_B = calculate_avg_level_and_day(data_cohort_B)\\n\""
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 2.1 Average level and average day of life at which purchases are made\n",
-    "# Функция для вычисления среднего уровня и среднего дня жизни, на котором совершаются покупки\n",
-    "\"\"\"\n",
-    "def calculate_avg_level_and_day(data):\n",
-    "    cohort_data_with_purchase = data[data['CountBuy'] > 0]\n",
-    "\n",
-    "    avg_level = cohort_data_with_purchase['MaxLevelPassed'].mean()\n",
-    "    avg_day = cohort_data_with_purchase['Retention'].mean()\n",
-    "\n",
-    "    return avg_level, avg_day\n",
-    "\n",
-    "# Вычисляем средний уровень и средний день жизни для когорты A и B с покупками\n",
-    "avg_level_cohort_A, avg_day_cohort_A = calculate_avg_level_and_day(data_cohort_A)\n",
-    "avg_level_cohort_B, avg_day_cohort_B = calculate_avg_level_and_day(data_cohort_B)\n",
-    "\"\"\"\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "outputs": [],
    "source": [
-    "\n",
     "# 2.1 Average level and average day of life at which purchases are made\n",
-    "# Функция для вычисления среднего уровня и среднего дня жизни, на котором совершаются первые покупки\n",
+    "# Function for calculating the average level and the average day of life in which the first purchases are made\n",
     "def calculate_avg_level_and_day(data):\n",
     "    cohort_data_with_purchase = data[data['CountBuy'] > 0]\n",
     "\n",
-    "    # Группируем данные по User_id, затем находим первый день жизни и первый уровень, на котором совершается покупка\n",
+    "    # We group the data by User_id, then find the first day of life and the first level at which the purchase is made\n",
     "    first_purchase_data = cohort_data_with_purchase.groupby('User_id').first()\n",
     "\n",
     "    avg_level = first_purchase_data['MaxLevelPassed'].mean()\n",
@@ -223,7 +182,7 @@
     "\n",
     "    return avg_level, avg_day\n",
     "\n",
-    "# Вычисляем средний уровень и средний день жизни для когорты A и B с покупками\n",
+    "# We calculate the average level and average day of life for cohorts A and B with purchases\n",
     "avg_level_cohort_A, avg_day_cohort_A = calculate_avg_level_and_day(data_cohort_A)\n",
     "avg_level_cohort_B, avg_day_cohort_B = calculate_avg_level_and_day(data_cohort_B)\n"
    ],
@@ -236,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "outputs": [
     {
      "data": {
@@ -249,10 +208,10 @@
    ],
    "source": [
     "# 2.2 Average level and average day of life at which purchases are made graph\n",
-    "# Графики для среднего уровня и среднего дня\n",
+    "# Charts for average level and average day\n",
     "plt.figure(figsize=(12, 5))\n",
     "\n",
-    "# График для среднего уровня\n",
+    "# Intermediate level chart\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.bar(['Cohort A'], avg_level_cohort_A, color='blue', label='Average Level')\n",
     "plt.bar(['Cohort B'], avg_level_cohort_B, color='green', label='Average Level', alpha=0.5)\n",
@@ -261,7 +220,7 @@
     "plt.ylabel('Average Level')\n",
     "plt.legend()\n",
     "\n",
-    "# График для среднего дня\n",
+    "# Average day chart\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.bar(['Cohort A'], avg_day_cohort_A, color='blue', label='Average Day')\n",
     "plt.bar(['Cohort B'], avg_day_cohort_B, color='green', label='Average Day', alpha=0.5)\n",
@@ -282,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [
     {
      "data": {
@@ -351,10 +310,9 @@
    ],
    "source": [
     "# 3 AVG Amount of gold received for Facebook and advertising\n",
-    "# Список признаков для анализа\n",
+    "# List of features to analyze\n",
     "features = ['Get_Ads', 'Get_Faceb']\n",
     "\n",
-    "# Постройте 8 графиков\n",
     "for feature in features:\n",
     "    for days_type in ['Total', 'Daily']:\n",
     "        for player_type in ['All', 'Paying']:\n",
@@ -391,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -403,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -415,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -427,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -439,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -451,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -463,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -475,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -487,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -499,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -511,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -523,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -535,7 +493,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
